# daynight-theme-gnome

./: Makefile  README.md  auto-background.py  auto-gnome-theme.service  auto_theme.py  auto_theme_config.py  daynight-gnome-theme.service  daynight_theme.py  daynight_theme_config.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
daynight_theme/: __init__.py  bitday_background.py  command.py  command_register.py  command_runner.py  daynight_theme_config.py  gnome_themes.py  gnome_utils.py  lat_long.py  main.py  notification.py  pycharm_daynight.py  sunrise_sunset_api.py  time_utils.py
daynight_theme/commands/: __init__.py  bitday_background.py  command.py  gnome_themes.py  notification.py  pycharm_daynight.py  spotify.py  sun_moon_local_background.py  top_bar_btn.py
test/: test_time_utils.py
tests/: test_time_utils.py
